--- a/Rhytms.Win81/packages.config
+++ b/Rhytms.Win81/packages.config
@@ -4,18 +4,23 @@
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net46" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net46" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
-  <package id="Syncfusion.Chart.MVVM.WPF46" version="14.3.0.49" targetFramework="net46" />
-  <package id="Syncfusion.Chart.WPF46" version="14.3.0.49" targetFramework="net46" />
-  <package id="Syncfusion.PropertyGrid.WPF46" version="14.3.0.49" targetFramework="net46" />
-  <package id="Syncfusion.Shared.MVVM.WPF46" version="14.3.0.49" targetFramework="net46" />
-  <package id="Syncfusion.Shared.WPF46" version="14.3.0.49" targetFramework="net46" />
-  <package id="Syncfusion.Tools.WPF46" version="14.3.0.49" targetFramework="net46" />
-  <package id="System.Reactive" version="3.0.0" targetFramework="net46" />
-  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net46" />
-  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net46" />
-  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net46" />
-  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net46" />
-  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net46" />
-  <package id="XamlSpy" version="3.0.4" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="Syncfusion.Chart.MVVM.WPF46" version="14.4.0.15" targetFramework="net46" />
+  <package id="Syncfusion.Chart.WPF46" version="14.4.0.15" targetFramework="net46" />
+  <package id="Syncfusion.PropertyGrid.WPF46" version="14.4.0.15" targetFramework="net46" />
+  <package id="Syncfusion.Shared.MVVM.WPF46" version="14.4.0.15" targetFramework="net46" />
+  <package id="Syncfusion.Shared.WPF46" version="14.4.0.15" targetFramework="net46" />
+  <package id="Syncfusion.Tools.WPF46" version="14.4.0.15" targetFramework="net46" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net46" />
+  <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net46" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net46" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net46" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net46" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net46" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net46" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net46" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net46" />
+  <package id="XamlSpy" version="3.0.5" targetFramework="net46" />
   <package id="XamlSpyLibs" version="3.0.5" targetFramework="net46" />
 </packages>
