--- a/Rhytms.Win81/packages.config
+++ b/Rhytms.Win81/packages.config
@@ -3,14 +3,14 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net46" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net46" />
-  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="Syncfusion.Chart.MVVM.WPF46" version="14.4.0.20" targetFramework="net46" />
-  <package id="Syncfusion.Chart.WPF46" version="14.4.0.20" targetFramework="net46" />
-  <package id="Syncfusion.PropertyGrid.WPF46" version="14.4.0.20" targetFramework="net46" />
-  <package id="Syncfusion.Shared.MVVM.WPF46" version="14.4.0.20" targetFramework="net46" />
-  <package id="Syncfusion.Shared.WPF46" version="14.4.0.20" targetFramework="net46" />
-  <package id="Syncfusion.Tools.WPF46" version="14.4.0.20" targetFramework="net46" />
+  <package id="MvvmLightLibs" version="5.4.0-alpha" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.1-beta1" targetFramework="net46" />
+  <package id="Syncfusion.Chart.MVVM.WPF46" version="15.1.0.33" targetFramework="net46" />
+  <package id="Syncfusion.Chart.WPF46" version="15.1.0.33" targetFramework="net46" />
+  <package id="Syncfusion.PropertyGrid.WPF46" version="15.1.0.33" targetFramework="net46" />
+  <package id="Syncfusion.Shared.MVVM.WPF46" version="15.1.0.33" targetFramework="net46" />
+  <package id="Syncfusion.Shared.WPF46" version="15.1.0.33" targetFramework="net46" />
+  <package id="Syncfusion.Tools.WPF46" version="15.1.0.33" targetFramework="net46" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net46" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net46" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
@@ -21,6 +21,4 @@
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net46" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net46" />
   <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net46" />
-  <package id="XamlSpy" version="3.0.5" targetFramework="net46" />
-  <package id="XamlSpyLibs" version="3.0.5" targetFramework="net46" />
 </packages>
